Bug 1142272 - platformAPI memory leak, delete on return false. r=erahm