dom/media/gmp/GMPChild.cpp
@@ -403,12 +403,14 @@ GMPChild::RecvStartPlugin()
   mGMPLoader = GMPProcessChild::GetGMPLoader();
   if (!mGMPLoader) {
     NS_WARNING("Failed to get GMPLoader");
+    delete platformAPI;
     return false;
   }
 
 #if defined(MOZ_GMP_SANDBOX) && defined(XP_MACOSX)
   if (!SetMacSandboxInfo()) {
     NS_WARNING("Failed to set Mac GMP sandbox info");
+    delete platformAPI;
     return false;
   }
 #endif
@@ -419,6 +421,7 @@ GMPChild::RecvStartPlugin()
                         mNodeId.size(),
                         platformAPI)) {
     NS_WARNING("Failed to load GMP");
+    delete platformAPI;
     return false;
   }
 
